Renamed packages to webs

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 0.0.2
-files = setup.py wstools/__init__.py
+files = setup.py webs/__init__.py
 commit = True
 tag = True
 
